# fileminer

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  azure-pipelines.yml  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: codecov.yml  main.yml  pytest-coverage-commentator.yml  python-app.yml
fileminer/: __init__.py  fileminer.py
tests/: __init__.py  test_fileminer.py
