[tool.poetry]
name = "fileminer"
version = "0.1.0"
description = ""
authors = ["DanSchl <95284229+DanSchl@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
